--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<version>2.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<!--<dependencyManagement>-->
