--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,55 @@
 version: '3.3'
 services:
-  mongodb1:
-    image: "mongo:latest"
-    container_name: mongodb1
-    networks:
-      app_subnet:
-        ipv4_address: ${IP_PREFIX}.4
 
   consuldev:
     image: "consul"
     container_name: consuldev
     restart: always
+    ports:
+      - 8500:8500
     environment:
       CONSUL_ALLOW_PRIVILEGED_PORTS: ""
     networks:
       app_subnet:
-        ipv4_address: ${IP_PREFIX}.3
-    volumes:
-      - ./consul.d:/consul/config
-    command: 'agent -dev -ui -dns-port 53 -recursor 8.8.8.8 -bind ${IP_PREFIX}.3 -client 0.0.0.0'
+        ipv4_address: ${IP_PREFIX}.10
+    command: 'agent -dev -ui -dns-port 53 -recursor 8.8.8.8 -bind ${IP_PREFIX}.10 -client 0.0.0.0'
 
-  server1:
+  mongodbsrv:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: MongoDockerfile
+    image: "mongosrv"
+    restart: always
+    container_name: mongosrv
+    networks:
+      app_subnet:
+        ipv4_address: ${IP_PREFIX}.4
+    depends_on:
+      - consuldev
+    environment:
+      - CONSUL_IP=${IP_PREFIX}.10
+
+  srvr:
+    build:
+      context: .
+      dockerfile: SrvrDockerfile
     image: 'dimanevelev/tweeter'
-    container_name: tweetersrv
+    container_name: tweetersrvr
+    restart: always
+    stdin_open: true
+    tty: true
     ports:
       - 8080:8080
       - 5005:5005 # remote debug port
     networks:
       - app_subnet
     depends_on:
-      - mongodb1
       - consuldev
     dns:
-      - ${IP_PREFIX}.3
-    environment:
-      - 'JAVA_ARGS=${JAVA_ARGS}'
+      - ${IP_PREFIX}.10
+#    environment:
+#      - 'JAVA_ARGS=${JAVA_ARGS}'
+    command: "java ${JAVA_ARGS} -jar /usr/local/run/tweeter.jar"
 
   test:
     image: "azukiapp/dig"
@@ -47,11 +59,11 @@ services:
     restart: on-failure
     command: "tail -f /dev/null"
     networks:
-    - app_subnet
-  #    depends_on:
-  #      - mongodb1
+      - app_subnet
+    depends_on:
+      - consuldev
     dns:
-     - ${IP_PREFIX}.3
+      - ${IP_PREFIX}.10
 
 networks:
   app_subnet:
