--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 IP_PREFIX=173.17.1
-JAVA_ARGS=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=5005,suspend=y
+#JAVA_ARGS=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=5005,suspend=y
